# AnarchyGraph

./: .gitignore  .pypirc  README.md  index.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  pylint.yml  python-publish.yml
anarchy/: __init__.py  edge.py  graph.py  node.py  search.py
docs/: independent.md  node.md  optimized.md  simple.md
perf_tests/: performance_tests.py
swarm/: edge.py  graph.py  node.py  search.py  util.py
tests/: test_edge.py  test_graph.py  test_node.py
tests/performance/: performance_tests.py
tests/unit/: test_edge.py  test_graph.py  test_node.py  test_search.py
